# rcdaq

./: #daq_device.h#  .#daq_device.h  INSTALL  Makefile.in  README.md  configure  daq_device_rtclock.cc  rcdaq.cc  rcdaq.h
CAENdrs/: CAENdrsTriggerHandler.cc  CAENdrsTriggerHandler.cc~  CAENdrs_plugin.cc  CAENdrs_plugin.cc~  CAENdrs_plugin.h  Makefile.am  Makefile.in  caen_client.cc  caen_manager.cc  caen_manager.h  configure  daq_device_CAENdrs.cc  daq_device_CAENdrs.cc_backjuly26.cpp  daq_device_CAENdrs.cc_bak  daq_device_CAENdrs.h  daq_device_CAENdrs_TDCADCONLY.cc  daq_device_CAENdrs_TDCADCONLY.h  daq_device_CAENdrs_bakjuly26.h  daq_device_CAENdrs_std.cc  daq_device_CAENdrs_std.cc_bak  daq_device_CAENdrs_std.cc_bak.cpp  daq_device_CAENdrs_std.cc_no1740  daq_device_CAENdrs_std.h  daq_device_CAENdrs_std.h_bak  daq_device_CAENdrs_std.h_bak.h  daq_device_CAENdrs_std.h_no1740  daq_device_CAENdrs_std.hbak  daq_device_CAENdrs_std_bak2.cc  setup.sh  sync.sh
CAENdrs/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
CAENdrs/bak-pha/: daq_device_CAENdrs_std.cc.multb  daq_device_CAENdrs_std.cc_old  daq_device_CAENdrs_std.h.multb
CAENdrs/bak-psd/: CAENdrsTriggerHandler.cc_irq  CAENdrsTriggerHandler.cc~  CAENdrsTriggerHandler.h_irq  daq_device_CAENdrs_std.cc_multb  daq_device_CAENdrs_std.cc_single  daq_device_CAENdrs_std.h_multb  daq_device_CAENdrs_std.h_single
autom4te.cache/: output.1  traces.0
caencmdvmeopt/: Makefile  caenvmeA16.c  caenvmeA16.c~  caenvmeA32.c  caenvmeA32.c~  (+7 more)
online_distribution/pmonitor/: Makefile.am  Makefile.in  MonitorClient.cc  MonitorClient.h  MonitorClientLinkDef.h  MonitorServer.cc  MonitorServer.h  configure  configure.in  pmongui.cc  pmonitor.cc  pmonitor.h  pmonstate.h  writePmonProject.pl
online_distribution/pmonitor/CVS/: Entries  Repository
online_distribution/pmonitor/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
online_distribution/pmonitor/examples/: README  fit.C  p_ex1.cc  p_ex1.h  p_ex1Makefile  p_ex2.cc  p_ex2.h  p_ex2LinkDef.h  p_ex2Makefile
online_distribution/pmonitor/examples/CVS/: Entries  Repository
(+277 files in other folders)
